Fixed z-indexing issue

--- a/src/WebComponents/Dialog/dialog.scss
+++ b/src/WebComponents/Dialog/dialog.scss
@@ -104,6 +104,7 @@
             flex: 0 1 auto;
             overflow: hidden;
             margin-top: calc(var(--theme-h1) + var(--theme-h5) * 2);
+            z-index: 1;
         }
     }
 }
